ここコれワンワン追加

--- a/index.html
+++ b/index.html
@@ -57,6 +57,29 @@
                 <div class="col mb-5">
                     <div class="card h-100">
                         <!-- Game image-->
+                        <img class="card-img-top game-img" src="assets/kikori/title.png" />
+                        <!-- Game details-->
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <!-- Game name-->
+                                <h5 class="fw-bolder">ここコれワンワン</h5>
+                                <!-- Game price-->
+                                制限時間内に木を切ろう！<br>
+                                PC・スマホ対応
+                            </div>
+                        </div>
+                        <!-- Game actions-->
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto"
+                                    href="pages/kikori/kikori.html">遊ぶ</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col mb-5">
+                    <div class="card h-100">
+                        <!-- Game image-->
                         <img class="card-img-top game-img" src="assets/kokohore/title.png" />
                         <!-- Game details-->
                         <div class="card-body p-4">
@@ -64,7 +87,8 @@
                                 <!-- Game name-->
                                 <h5 class="fw-bolder">ここ掘れワンワン</h5>
                                 <!-- Game price-->
-                                ニオイをかいでホネを掘り起こそう！
+                                ニオイをかいでホネを掘り起こそう！<br>
+                                PC・スマホ対応
                             </div>
                         </div>
                         <!-- Game actions-->
@@ -81,7 +105,7 @@
     <!-- Footer-->
     <footer class="py-5 bg-dark">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Osushi-Tabezo 2024</p>
+            <p class="m-0 text-center text-white">Copyright &copy; Osushi-Tabezo</p>
         </div>
     </footer>
     <!-- Bootstrap core JS-->
