--- a/pages/kikori/kikori.html
+++ b/pages/kikori/kikori.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>ここ掘れワンワン - 色々置き場</title>
+    <title>ここコれワンワン - 色々置き場</title>
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
@@ -61,12 +61,48 @@
                 </div>
                 <div class="col mb-4">
                     <!-- Game image-->
-                    <img class="" src="../../assets/kokohore/readme_ver2.png" />
+                    <img class="" src="../../assets/kikori/gamen.png" />
                 </div>
                 <div class="col mb-4">
                 </div>
                 <!-- <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                 </div> -->
+            </div>
+            <div class="row">
+                <div class="col mb-4">
+                </div>
+                <div class="col mb-4">
+                    <h5>①時間です。60秒で終了です。</h5>
+                    <h5>②コンボです。テンポ良く切ると加算されます。</h5>
+                    <h5>③木です。これを切っていきます。</h5>
+                    <h5>④トゲです。反対方向に避けてください。</h5>
+                    <h5>⑤虫です。反対側に動くので注意してください。</h5>
+                    <h5>⑥イヌです。左右に移動できます。</h5>
+                </div>
+                <div class="col mb-4">
+                </div>
+                <!-- <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+                </div> -->
+            </div>
+            <div class="row">
+                <div class="col mb-4">
+                </div>
+                <div class="col mb-4">
+                    <!-- Game image-->
+                    <img class="" src="../../assets/kikori/pc.png" />
+                </div>
+                <div class="col mb-4">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col mb-4">
+                </div>
+                <div class="col mb-4">
+                    <!-- Game image-->
+                    <img class="" src="../../assets/kikori/gamepad.png" />
+                </div>
+                <div class="col mb-4">
+                </div>
             </div>
             <div class="row">
                 <div class="col mb-4">
