--- a/pages/kikori/kikori.html
+++ b/pages/kikori/kikori.html
@@ -69,9 +69,9 @@
                 </div> -->
             </div>
             <div class="row">
-                <div class="col mb-4">
+                <div class="col-3 mb-4">
                 </div>
-                <div class="col mb-4">
+                <div class="col-8 mb-4">
                     <h5>①時間です。60秒で終了です。</h5>
                     <h5>②コンボです。テンポ良く切ると加算されます。</h5>
                     <h5>③木です。これを切っていきます。</h5>
@@ -79,7 +79,7 @@
                     <h5>⑤虫です。反対側に動くので注意してください。</h5>
                     <h5>⑥イヌです。左右に移動できます。</h5>
                 </div>
-                <div class="col mb-4">
+                <div class="col-1 mb-4">
                 </div>
                 <!-- <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                 </div> -->
@@ -105,14 +105,14 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col mb-4">
+                <div class="col-2 mb-4">
                 </div>
-                <div class="col mb-4 text-center">
+                <div class="col-8 mb-4 text-center">
                     <h2>
                         <a href="https://osusi-tabezo.github.io/KokokoreWANWAN/" target="_blank">ゲームプレイはこちらから！</a>
                     </h2>
                 </div>
-                <div class="col mb-4">
+                <div class="col-2 mb-4">
                 </div>
                 <!-- <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                 </div> -->
