--- a/pages/kokohore/kokohore.html
+++ b/pages/kokohore/kokohore.html
@@ -69,14 +69,14 @@
                 </div> -->
             </div>
             <div class="row">
-                <div class="col mb-4">
+                <div class="col-2 mb-4">
                 </div>
-                <div class="col mb-4 text-center">
+                <div class="col-8 mb-4 text-center">
                     <h2>
                         <a href="https://osusi-tabezo.github.io/KokokoreWANWAN/" target="_blank">ゲームプレイはこちらから！</a>
                     </h2>
                 </div>
-                <div class="col mb-4">
+                <div class="col-2 mb-4">
                 </div>
                 <!-- <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                 </div> -->
