--- a/pages/kokohore/kokohore.html
+++ b/pages/kokohore/kokohore.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-8 mb-4 text-center">
                     <h2>
-                        <a href="https://osusi-tabezo.github.io/KokokoreWANWAN/" target="_blank">ゲームプレイはこちらから！</a>
+                        <a href="https://osusi-tabezo.github.io/KokohoreWANWAN/" target="_blank">ゲームプレイはこちらから！</a>
                     </h2>
                 </div>
                 <div class="col-2 mb-4">
