ここコれのreadmeに色々追加

--- a/pages/kikori/kikori.html
+++ b/pages/kikori/kikori.html
@@ -61,6 +61,16 @@
                 </div>
                 <div class="col mb-4">
                     <!-- Game image-->
+                    <img class="" src="../../assets/kikori/top.png" />
+                </div>
+                <div class="col mb-4">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col mb-4">
+                </div>
+                <div class="col mb-4">
+                    <!-- Game image-->
                     <img class="" src="../../assets/kikori/gamen.png" />
                 </div>
                 <div class="col mb-4">
@@ -76,7 +86,7 @@
                     <h5>②コンボです。テンポ良く切ると加算されます。</h5>
                     <h5>③木です。これを切っていきます。</h5>
                     <h5>④トゲです。反対方向に避けてください。</h5>
-                    <h5>⑤虫です。反対側に動くので注意してください。</h5>
+                    <h5>⑤虫です。直前で反対側に動くので注意してください。</h5>
                     <h5>⑥イヌです。左右に移動できます。</h5>
                 </div>
                 <div class="col-1 mb-4">
@@ -100,6 +110,16 @@
                 <div class="col mb-4">
                     <!-- Game image-->
                     <img class="" src="../../assets/kikori/gamepad.png" />
+                </div>
+                <div class="col mb-4">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col mb-4">
+                </div>
+                <div class="col mb-4">
+                    <!-- Game image-->
+                    <img class="" src="../../assets/kikori/tips.png" />
                 </div>
                 <div class="col mb-4">
                 </div>
